--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
+# Dependencies
+node_modules/
+.venv/
+
+# Build output
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,41 +35,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Build files
-build/
-.cache/
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
 
 # Testing
 coverage/
 .nyc_output/
 
-# OS generated files
-Thumbs.db
-.DS_Store
-
-# Package manager
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-.vercel
+# Temporary files
+*.tmp
+*.temp
+.cache/
