优化勋章分组按钮布局，支持自动换行和自适应长度

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "webdav": "node webdav-server.js",
+    "start": "npm run webdav & npm run dev"
   },
   "dependencies": {
     "@capacitor-community/electron": "^5.0.1",
@@ -28,6 +30,7 @@
     "@vitejs/plugin-react": "^5.0.0",
     "terser": "^5.44.1",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "webdav-server": "^2.6.2"
   }
 }
