统一系统名称为人生游戏管理系统，更新部署指南文件名

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "反本能·主动进化系统",
-  "short_name": "主动进化系统",
-  "description": "基于认知科学的外部执行力外骨骼，利用热力学第二定律和进化心理学原理，通过强制性的结构和即时的多巴胺反馈，帮助用户执行有利于长期成长的行为。",
+  "name": "人生游戏管理系统",
+  "short_name": "人生游戏系统",
+  "description": "一个基于游戏化思维的人生管理系统，通过任务、成就、奖励等机制，帮助用户管理生活、提升自我、实现目标。",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
