--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "webdav": "node webdav-server.js",
     "server": "node server.js",
-    "start": "concurrently \"npm run server\" \"npm run dev\""
+    "start": "concurrently \"npm run server\" \"npm run dev\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@capacitor-community/electron": "^5.0.1",
@@ -42,6 +44,7 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "concurrently": "^9.2.1",
+    "gh-pages": "^6.3.0",
     "http-proxy-middleware": "^3.0.5",
     "terser": "^5.44.1",
     "typescript": "~5.8.2",
