Sync local changes including pomodoro fixes

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "three-stdlib": "^2.36.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/node": "^22.19.7",
     "@vitejs/plugin-react": "^5.0.0",
     "concurrently": "^9.2.1",
