--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-dom": "^19.2.3",
     "recharts": "^3.6.0",
     "three": "^0.182.0",
-    "three-stdlib": "^2.36.1"
+    "three-stdlib": "^2.36.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
