--- a/.github/workflows/react-gh-pages.yml
+++ b/.github/workflows/react-gh-pages.yml
@@ -24,6 +24,9 @@ jobs:
   # 构建和部署作业
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       # 检出代码
       - name: Checkout
@@ -51,5 +54,5 @@ jobs:
           path: ./dist
 
       # 部署到GitHub Pages
-      - name: Deploy to GitHub Pages
+      - name: deployment
         uses: actions/deploy-pages@v4
