--- a/package.json
+++ b/package.json
@@ -45,11 +45,15 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.19.7",
     "@vitejs/plugin-react": "^5.1.2",
+    "autoprefixer": "^10.4.24",
     "concurrently": "^9.2.1",
     "gh-pages": "^6.3.0",
     "http-proxy-middleware": "^3.0.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "terser": "^5.44.1",
     "typescript": "~5.8.2",
     "vite": "^6.4.1",
